Made roomCreation.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>projectHub</title>
         <style>
             body {
-                background-color: #ffdd99;
+                background-color: rgb(244, 184, 105);
             }
             
             h1 {
@@ -39,7 +39,7 @@
                 border: 1px solid black;
                 border-radius: 20px;
                 text-align: center;
-                background-color: #ffffff;
+                background-color: white;
             }
         </style>
     </head>
