--- a/layout.html
+++ b/layout.html
@@ -14,7 +14,7 @@
       margin: 0;
       height: 80px;
       width: 100%;
-      background-color: none;
+      background-color: rgb(244, 184, 105);
       position: fixed;
       border-bottom: 3px black solid;
       clear: left;
