--- a/main.html
+++ b/main.html
@@ -82,18 +82,18 @@
       </div>
 
 
-      <div id="createNewRoom" class="buttonBorder">
+      <input type="button" id="createNewRoom" class="buttonBorder">
         Create New Room
-      </div>
+      </button>
 
-      <div  id="joinExsitingRoom" class="buttonBorder">
+      <button  id="joinExsitingRoom" class="buttonBorder">
         Join Exsiting Room
-      </div>
+      </button>
 
     </div>
 
     <div id="roomSpace">
-      <table>
+      <!-- <table>
         <tr>
           <td colspan="2">
             Projects 1 Work Flow
@@ -181,9 +181,29 @@
             <imgae class="inlineImg" src="./images/exit.png" alt="exit"/>
           </td>
         </tr>
-      </table>
+      </table> -->
 
     </div>
+    
+    <!-- Firebase App is always required and must be first -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-app.js"></script>
+
+    <!-- Add additional services that you want to use -->
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-database.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-firestore.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-messaging.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-functions.js"></script>
+
+    <!-- Comment out (or don't include) services that you don't want to use -->
+    <!-- <script src="https://www.gstatic.com/firebasejs/5.5.8/firebase-storage.js"></script> -->
+
+    <script src="./js/firebase_setup.js"></script>
+
+    <script src="./js/jquery-3.3.1.min.js"></script>
+    <script src="./js/jquery-3.3.1.js"></script>
+
+    <script src="./js/main.js"></script>
 
   </body>
 </html>
