updated main.html and main.js to exit a room.

--- a/main.html
+++ b/main.html
@@ -84,7 +84,7 @@
 
       <input type="button" id="createNewRoom" class="buttonBorder">
         Create New Room
-      </button>
+    </input>
 
       <button  id="joinExsitingRoom" class="buttonBorder">
         Join Exsiting Room
@@ -204,6 +204,5 @@
     <script src="./js/jquery-3.3.1.js"></script>
 
     <script src="./js/main.js"></script>
-
   </body>
 </html>
