fixed a button in the agenda screen

--- a/agenda/index.html
+++ b/agenda/index.html
@@ -316,8 +316,8 @@
 
     <div id='sidebar'>
       <a id='exit' class='sideButton'><img id='exitImage' src='./images/exit.png'>Exit Room</a>
-      <a id='agenda' class='sideButton'>Agenda</a>
-      <a id='chat' class='sideButton'>Chat</a>
+      <a id='agenda' class='sideButton' href='../agenda/index.html'>Agenda</a>
+      <a id='chat' class='sideButton' href='../chat-room/index.html'>Chat</a>
     <!--  <a id='admin' class='sideButton'>Admin</a> -->
     </div>
 
