--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 
   <body>
     <div id='header'>
-        <span id='roomName'>ProjectHub</span>
+        <span id='roomName'>projectHub</span>
         <a id='logout' class='topButton' href='test'>Logout</a>
         <a id='settings' class='topButton' href='test'>Settings</a>
         <span id='profileName'>Username</span>
@@ -17,19 +17,6 @@
     </div>
 
     <div id='agendaSpace'>Loading agendas ...</div>
-
-    <div class='modal'>
-      <div id="create_agenda_modal">
-          <input id="agendaDesc" class="floatClearRight" type="text" placeholder="What the task is about" size="30" required/>
-          <label class="floatClearRight members">name1<input class="nameCheckbox" type="checkbox" value="name1"/></label>
-          <label class="floatClearRight members">name2<input class="nameCheckbox" type="checkbox" value="name2"/></label>
-          <label class="floatClearRight members">name3<input class="nameCheckbox" type="checkbox" value="name3"/></label>
-          <label class="floatClearRight members">name4<input class="nameCheckbox" type="checkbox" value="name4"/></label>
-          <label id="dueDate" class="floatClearRight members" >Due Date: <input type="date" min="2018-11-21"/></label>
-          <label id="dueTime" class="floatClearRight members">Due Time: <input type="time" value="23:59"/></label>
-          <button id="createBtn" class="floatClearRight">Create</button>
-      </div>
-    </div>
 
     <!-- <header>
       <div>
