Removed infinite loading message from chatroom, altered CSS of roomCreation

--- a/chat_room.html
+++ b/chat_room.html
@@ -8,10 +8,10 @@
 
   <body>
     <div id='header'>
-      <span id='room'>COMP-1930 Project Room Name</span>
+      <span id='room'></span>
       <a id='logout' class='topButton' href='./index.html'>Logout</a>
       <a id='settings' class='topButton' href='./main.html'>Exit Room</a>
-      <span id='profileName'>Username</span>
+      <span id='profileName'>...</span>
       <img id='profileImage' src='./images/profile-blue-background.png' alt='A profile image'>
     </div>
 
