need to commit to pull...

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                 displayName: displayName,
                 email: email,
             });
-            console.log('writeUserData funciotn called.');
+            console.log('writeUserData function called.');
         }
         </script>
 
